--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "devDependencies": {
     "@release-it/keep-a-changelog": "5.0.0",
     "chai": "4.3.7",
-    "eslint": "8.57.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-mozilla": "^3.7.4",
     "eslint-plugin-no-unsanitized": "^4.0.2",
     "htmltidy2": "1.0.0",
